Fix info box overflow, add overflow scrollbar to filters

--- a/src/styles/modules/_body.scss
+++ b/src/styles/modules/_body.scss
@@ -365,6 +365,16 @@ body {
     margin-top: -15px;
     margin-bottom: 15px;
   }
+
+  .info-box-keywords, .info-box-topics {
+    .tags {
+      .tag {
+        height: unset;
+        white-space: pre-line;
+        word-wrap: break-word;
+      }
+    }
+  }
 }
 
 .main-content {
