--- a/src/styles/modules/_filters.scss
+++ b/src/styles/modules/_filters.scss
@@ -5,11 +5,17 @@
     position: sticky;
     top: 15px;
     z-index: 1;
-  }
 
-  .filter-buttons {
-    display: flex;
-    justify-content: flex-start;
+    .filter-buttons {
+      display: flex;
+      justify-content: flex-start;
+    }
+
+    .filter-panels {
+      overflow-y: scroll;
+      max-height: 100vh;
+      padding: 1px;
+    }
   }
 
   .sk-select {
